# deepgeodemo

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: configuration.md  index.md  installation.md  usage.md
example/: example.csv  example.yml  example_ae_search.py  example_depth_latent.yml  example_make_blobs.py  example_minimal.yml  example_plot_results.py  example_sparse_jumprelu.yml  example_sparse_relu.yml  example_with_validate.yml
examples/: example.yml  example_ae_search.py  example_depth_latent.yml  example_make_blobs.py  example_minimal.yml  example_plot_results.py  example_sparse_jumprelu.yml  example_sparse_relu.yml  example_with_validate.yml
src/deepgeodemo/: __init__.py  activation.py  autoencoder_search.py  autoencoder_train_latent.py  cli.py  kmeans_rapids.py  kmeans_rapids_search.py  kmeans_sklearn.py  kmeans_sklearn_search.py  loss.py  models.py
src/torchgeodemo/: autoencoder_train_latent.py  cli.py  kmeans_rapids.py  kmeans_rapids_search.py  kmeans_sklearn.py  loggers.py  models.py
tests/: README.md  test_activation.py  test_autoencoder_search.py  test_autoencoder_train_latent.py  test_loss.py  test_models.py
